unpackaged/main/default/objects/Case/fields/In_Progress_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Start_Date__c</fullName>
    <label>In Progress Start Date</label>
    <type>DateTime</type>
</CustomField>