unpackaged/main/default/objects/Case/fields/In_Progress_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Time__c</fullName>
    <formula>((5 * ( FLOOR( ( DATEVALUE(  In_Progress_End_Date__c  ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(In_Progress_End_Date__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(  In_Progress_Start_Date__c  ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(In_Progress_Start_Date__c) - DATE( 1900, 1, 8), 7 ) ) ))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>