unpackaged/main/default/objects/Case/fields/Jira_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket__c</fullName>
    <description>Jira Ticket related to case</description>
    <inlineHelpText>If case is related to a jira ticket, please write ticket number</inlineHelpText>
    <label>Linear Ticket</label>
    <type>Url</type>
</CustomField>