unpackaged/main/default/objects/Case/fields/Last_update__c.field-meta.xml
<CustomField>
    <fullName>Last_update__c</fullName>
    <description>Date in which last update to client was done</description>
    <label>Last update</label>
    <type>DateTime</type>
</CustomField>