unpackaged/main/default/objects/Case/fields/LC_Coordinator_email__c.field-meta.xml
<CustomField>
    <fullName>LC_Coordinator_email__c</fullName>
    <label>LC Coordinator email</label>
    <type>TextArea</type>
</CustomField>