unpackaged/main/default/objects/Case/fields/Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads__c</fullName>
    <label>Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>