unpackaged/main/default/objects/Case/fields/Link_to_neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Link_to_neighborhood__c</fullName>
    <label>Link to neighborhood</label>
    <type>TextArea</type>
</CustomField>