unpackaged/main/default/objects/Case/fields/Link_to_Slack_Thread__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Slack_Thread__c</fullName>
    <label>Link to Slack Thread</label>
    <type>Url</type>
</CustomField>