unpackaged/main/default/objects/Case/fields/Listing_address__c.field-meta.xml
<CustomField>
    <fullName>Listing_address__c</fullName>
    <label>Listing address</label>
    <type>Url</type>
</CustomField>