unpackaged/main/default/objects/Case/fields/Listing_agent_name__c.field-meta.xml
<CustomField>
    <fullName>Listing_agent_name__c</fullName>
    <label>Listing agent name</label>
    <type>TextArea</type>
</CustomField>