unpackaged/main/default/objects/Case/fields/Listing_s_MLS_ID__c.field-meta.xml
<CustomField>
    <fullName>Listing_s_MLS_ID__c</fullName>
    <label>Listing&#39;s MLS ID</label>
    <type>TextArea</type>
</CustomField>