unpackaged/main/default/objects/Case/fields/Living_space__c.field-meta.xml
<CustomField>
    <fullName>Living_space__c</fullName>
    <label>Living space</label>
    <length>10</length>
    <type>Text</type>
</CustomField>