unpackaged/main/default/objects/Case/fields/Location_section__c.field-meta.xml
<CustomField>
    <fullName>Location_section__c</fullName>
    <label>Location section</label>
    <type>TextArea</type>
</CustomField>