unpackaged/main/default/objects/Case/fields/Location_section_assets__c.field-meta.xml
<CustomField>
    <fullName>Location_section_assets__c</fullName>
    <label>Location section assets</label>
    <type>TextArea</type>
</CustomField>