unpackaged/main/default/objects/Case/fields/Lot_size__c.field-meta.xml
<CustomField>
    <fullName>Lot_size__c</fullName>
    <label>Lot size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>