unpackaged/main/default/objects/Case/fields/Missed_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Missed_Deliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missed Deliverable</label>
    <type>Checkbox</type>
</CustomField>