unpackaged/main/default/objects/Case/fields/Months_to_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Months_to_Renewal__c</fullName>
    <label>Months to Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>