unpackaged/main/default/objects/Case/fields/Needs_Deployment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Needs_Deployment_End_Date__c</fullName>
    <label>Needs Deployment End Date</label>
    <type>DateTime</type>
</CustomField>