unpackaged/main/default/objects/Case/fields/Needs_More_Information_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Needs_More_Information_Start_Date__c</fullName>
    <label>Needs More Information Start Date</label>
    <type>DateTime</type>
</CustomField>