unpackaged/main/default/objects/Case/fields/Needs_More_Information_Time__c.field-meta.xml
<CustomField>
    <fullName>Needs_More_Information_Time__c</fullName>
    <formula>((5 * ( FLOOR( ( DATEVALUE(  Needs_More_Information_End_Date__c  ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Needs_More_Information_End_Date__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(  Needs_More_Information_Start_Date__c  ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Needs_More_Information_Start_Date__c) - DATE( 1900, 1, 8), 7 ) ) ))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs More Information Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>