unpackaged/main/default/objects/Case/fields/Neighborhood_copy__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_copy__c</fullName>
    <label>Neighborhood copy</label>
    <type>TextArea</type>
</CustomField>