unpackaged/main/default/objects/Case/fields/Neighborhood_Page__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_Page__c</fullName>
    <inlineHelpText>Please let us know what updates you would like our team to make on the video page.</inlineHelpText>
    <label>Neighborhood Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>