unpackaged/main/default/objects/Case/fields/Neighborhood_Page_Assets__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_Page_Assets__c</fullName>
    <inlineHelpText>Please upload any assets needed to make edits.</inlineHelpText>
    <label>Neighborhood Page Assets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>