unpackaged/main/default/objects/Case/fields/New_End_Date__c.field-meta.xml
<CustomField>
    <fullName>New_End_Date__c</fullName>
    <label>New End Date</label>
    <type>DateTime</type>
</CustomField>