unpackaged/main/default/objects/Case/fields/New_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Start_Date__c</fullName>
    <label>New Start Date</label>
    <type>DateTime</type>
</CustomField>