unpackaged/main/default/objects/Case/fields/New_Time__c.field-meta.xml
<CustomField>
    <fullName>New_Time__c</fullName>
    <formula>8*(( 5 * FLOOR( ( DATEVALUE(  New_End_Date__c  ) - DATE( 1996, 1, 8) ) / 7) + 
MIN(5, 
MOD( DATEVALUE( New_End_Date__c ) - DATE( 1996, 1, 8), 7) + 
MIN( 1, 24 / 12 * ( MOD( New_End_Date__c - DATETIMEVALUE( &#39;1996-01-08 16:00:00&#39; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE(  New_Start_Date__c  ) - DATE( 1996, 1, 8) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( New_Start_Date__c ) - DATE( 1996, 1, 8), 7 ) + 
MIN( 1, 24 / 12 * ( MOD( New_Start_Date__c - DATETIMEVALUE( &#39;1996-01-08 16:00:00&#39; ), 1) ) ) 
) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>