unpackaged/main/default/objects/Case/fields/North_Star_Beta__c.field-meta.xml
<CustomField>
    <fullName>North_Star_Beta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>North Star Beta</label>
    <type>Checkbox</type>
</CustomField>