unpackaged/main/default/objects/Case/fields/Notes_for_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Submitter__c</fullName>
    <label>Notes for Submitter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>