unpackaged/main/default/objects/Case/fields/Notes_Results__c.field-meta.xml
<CustomField>
    <fullName>Notes_Results__c</fullName>
    <label>Notes/Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>