unpackaged/main/default/objects/Case/fields/Now_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Now_First_Response__c</fullName>
    <formula>(
ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE(NOW()) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE(NOW()) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD(DATETIMEVALUE(NOW()) - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( First_Response_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( First_Response_Time__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( First_Response_Time__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1) ) )
)
)
),
0 )
)/8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Now - First Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>