unpackaged/main/default/objects/Case/fields/Now_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Now_Last_Update__c</fullName>
    <formula>(8 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( NOW() - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( Last_update__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( Last_update__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( Last_update__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1) ) )
    )
   ) 
  )
)*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Now - Last Update</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>