unpackaged/main/default/objects/Case/fields/Number_of_SLA_Breaches__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SLA_Breaches__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of SLA Breaches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>