unpackaged/main/default/objects/Case/fields/of_Reels__c.field-meta.xml
<CustomField>
    <fullName>of_Reels__c</fullName>
    <label># of Reels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>