unpackaged/main/default/objects/Case/fields/On_Hold_End_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_End_Date__c</fullName>
    <label>On Hold End Date</label>
    <type>DateTime</type>
</CustomField>