unpackaged/main/default/objects/Case/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>Blocked Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Needs more information from BSA</fullName>
            </value>
            <value>
                <fullName>Needs more information from the Submitter</fullName>
            </value>
            <value>
                <fullName>On Hold until next quarter</fullName>
            </value>
            <value>
                <fullName>Bandwidth</fullName>
            </value>
            <value>
                <fullName>Dependent on another process</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Backlogged due to bandwidth</fullName>
                <isActive>false</isActive>
                <label>Backlogged due to bandwidth</label>
            </value>
            <value>
                <fullName>Waiting on CS</fullName>
                <isActive>false</isActive>
                <label>Waiting on CS</label>
            </value>
            <value>
                <fullName>Waiting on Operations</fullName>
                <isActive>false</isActive>
                <label>Waiting on Operations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>