unpackaged/main/default/objects/Case/fields/On_Hold_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Start_Date__c</fullName>
    <label>On Hold Start Date</label>
    <type>DateTime</type>
</CustomField>