unpackaged/main/default/objects/Case/fields/Other_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Other_Competitor__c</fullName>
    <description>Case 00104603 - populate competitor if Other is selected from picklist</description>
    <inlineHelpText>Name of the &quot;Other&quot; Competitor Client is moving to</inlineHelpText>
    <label>Other Competitor</label>
    <length>48</length>
    <type>Text</type>
</CustomField>