unpackaged/main/default/objects/Case/fields/Other_contributing_reasons__c.field-meta.xml
<CustomField>
    <fullName>Other_contributing_reasons__c</fullName>
    <label>Other contributing reasons</label>
    <type>TextArea</type>
</CustomField>