unpackaged/main/default/objects/Case/fields/Overview_assests__c.field-meta.xml
<CustomField>
    <fullName>Overview_assests__c</fullName>
    <label>Overview assests</label>
    <type>TextArea</type>
</CustomField>