unpackaged/main/default/objects/Case/fields/Overview_section__c.field-meta.xml
<CustomField>
    <fullName>Overview_section__c</fullName>
    <label>Overview section</label>
    <type>TextArea</type>
</CustomField>