unpackaged/main/default/objects/Case/fields/Overview_section_assets__c.field-meta.xml
<CustomField>
    <fullName>Overview_section_assets__c</fullName>
    <label>Overview section assets</label>
    <type>TextArea</type>
</CustomField>