unpackaged/main/default/objects/Case/fields/Pages_to_make_revision__c.field-meta.xml
<CustomField>
    <fullName>Pages_to_make_revision__c</fullName>
    <inlineHelpText>WHAT PAGES WOULD YOU LIKE TO MAKE REVISIONS ON?</inlineHelpText>
    <label>Pages to make revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>