unpackaged/main/default/objects/Case/fields/Pages_to_Review__c.field-meta.xml
<CustomField>
    <fullName>Pages_to_Review__c</fullName>
    <inlineHelpText>What pages would you like to make revisions on?
Our team will be in touch once the revisions have been completed. Standard turnaround times are 2-3 business days.</inlineHelpText>
    <label>Pages to Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>