unpackaged/main/default/objects/Case/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <inlineHelpText>Phone number to use throughout the website</inlineHelpText>
    <label>Phone Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>