unpackaged/main/default/objects/Case/fields/Photo_Gallery_Page__c.field-meta.xml
<CustomField>
    <fullName>Photo_Gallery_Page__c</fullName>
    <inlineHelpText>Please let us know what updates you would like our team to make on the photo gallery.</inlineHelpText>
    <label>Photo Gallery Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>