unpackaged/main/default/objects/Case/fields/Photos_link__c.field-meta.xml
<CustomField>
    <fullName>Photos_link__c</fullName>
    <label>Photos link</label>
    <type>TextArea</type>
</CustomField>