unpackaged/main/default/objects/Case/fields/Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Date__c</fullName>
    <label>Post Date</label>
    <type>Date</type>
</CustomField>