unpackaged/main/default/objects/Case/fields/Preference_for_the_neighborhood_copy__c.field-meta.xml
<CustomField>
    <fullName>Preference_for_the_neighborhood_copy__c</fullName>
    <label>Preference for the neighborhood copy</label>
    <type>TextArea</type>
</CustomField>