unpackaged/main/default/objects/Case/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <length>10</length>
    <type>Text</type>
</CustomField>