unpackaged/main/default/objects/Case/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <formula>Service_Schedule__r.Primary_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Location</label>
    <type>Text</type>
</CustomField>