unpackaged/main/default/objects/Case/fields/Priority_Category__c.field-meta.xml
<CustomField>
    <fullName>Priority_Category__c</fullName>
    <label>Priority Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Great</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>