unpackaged/main/default/objects/Case/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <label>Priority Level</label>
    <type>TextArea</type>
</CustomField>