unpackaged/main/default/objects/Case/fields/Product_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Product_Engineering__c</fullName>
    <label>Product &amp; Engineering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Customization Request</fullName>
            </value>
            <value>
                <fullName>Feature or Service Request</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>