unpackaged/main/default/objects/Case/fields/Product_Limit__c.field-meta.xml
<CustomField>
    <fullName>Product_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Limit</label>
    <type>Checkbox</type>
</CustomField>