unpackaged/main/default/objects/Case/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <label>Production</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>