unpackaged/main/default/objects/Case/fields/Proofing_Email__c.field-meta.xml
<CustomField>
    <fullName>Proofing_Email__c</fullName>
    <inlineHelpText>Email of who will be providing edits and launch approval</inlineHelpText>
    <label>Proofing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>