unpackaged/main/default/objects/Case/fields/Propert_features_and_amenities__c.field-meta.xml
<CustomField>
    <fullName>Propert_features_and_amenities__c</fullName>
    <label>Propert features and amenities</label>
    <type>TextArea</type>
</CustomField>