unpackaged/main/default/objects/Case/fields/Property_currently_visible__c.field-meta.xml
<CustomField>
    <fullName>Property_currently_visible__c</fullName>
    <label>Property currently visible?</label>
    <type>TextArea</type>
</CustomField>