unpackaged/main/default/objects/Case/fields/Property_description__c.field-meta.xml
<CustomField>
    <fullName>Property_description__c</fullName>
    <label>Property description</label>
    <type>TextArea</type>
</CustomField>