unpackaged/main/default/objects/Case/fields/Property_details__c.field-meta.xml
<CustomField>
    <fullName>Property_details__c</fullName>
    <label>Property details</label>
    <type>TextArea</type>
</CustomField>