unpackaged/main/default/objects/Case/fields/Property_name__c.field-meta.xml
<CustomField>
    <fullName>Property_name__c</fullName>
    <label>Property name</label>
    <type>TextArea</type>
</CustomField>