unpackaged/main/default/objects/Case/fields/Property_type__c.field-meta.xml
<CustomField>
    <fullName>Property_type__c</fullName>
    <label>Property type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>