unpackaged/main/default/objects/Case/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1-2024</fullName>
            </value>
            <value>
                <fullName>Q2-2024</fullName>
            </value>
            <value>
                <fullName>Q3-2024</fullName>
            </value>
            <value>
                <fullName>Q4-2024</fullName>
            </value>
            <value>
                <fullName>Q2-2023</fullName>
                <isActive>false</isActive>
                <label>Q2-2023</label>
            </value>
            <value>
                <fullName>Q3-2023</fullName>
                <isActive>false</isActive>
                <label>Q3-2023</label>
            </value>
            <value>
                <fullName>Q4-2023</fullName>
                <isActive>false</isActive>
                <label>Q4-2023</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>