unpackaged/main/default/objects/Case/fields/Quotes_section__c.field-meta.xml
<CustomField>
    <fullName>Quotes_section__c</fullName>
    <label>Quotes section</label>
    <type>TextArea</type>
</CustomField>