unpackaged/main/default/objects/Case/fields/Quotes_section_assets__c.field-meta.xml
<CustomField>
    <fullName>Quotes_section_assets__c</fullName>
    <label>Quotes section assets</label>
    <type>TextArea</type>
</CustomField>