unpackaged/main/default/objects/Case/fields/Reach__c.field-meta.xml
<CustomField>
    <fullName>Reach__c</fullName>
    <label>Reach</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>