unpackaged/main/default/objects/Case/fields/Ready_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_End_Date__c</fullName>
    <label>Ready End Date</label>
    <type>DateTime</type>
</CustomField>