unpackaged/main/default/objects/Case/fields/Ready_for_UAT_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_UAT_End_Date__c</fullName>
    <label>Ready for UAT End Date</label>
    <type>DateTime</type>
</CustomField>