unpackaged/main/default/objects/Case/fields/Ready_for_UAT_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_UAT_Start_Date__c</fullName>
    <label>Ready for UAT Start Date</label>
    <type>DateTime</type>
</CustomField>