unpackaged/main/default/objects/Case/fields/Ready_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_Start_Date__c</fullName>
    <label>Ready Start Date</label>
    <type>DateTime</type>
</CustomField>