unpackaged/main/default/objects/Case/fields/Reason_for_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_cancellation__c</fullName>
    <inlineHelpText>Only for when other option is selected on CX churn suvery</inlineHelpText>
    <label>Reason for cancellation:</label>
    <type>TextArea</type>
</CustomField>