unpackaged/main/default/objects/Case/fields/Refund_Credit__c.field-meta.xml
<CustomField>
    <fullName>Refund_Credit__c</fullName>
    <label>Refund/Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>