unpackaged/main/default/objects/Case/fields/Reopen_after_closed__c.field-meta.xml
<CustomField>
    <fullName>Reopen_after_closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reopen after closed?</label>
    <type>Checkbox</type>
</CustomField>