unpackaged/main/default/objects/Case/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <label>Reported Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>