unpackaged/main/default/objects/Case/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <label>Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed Onboarding</fullName>
            </value>
            <value>
                <fullName>Service Issue</fullName>
            </value>
            <value>
                <fullName>Missed Deliverable</fullName>
            </value>
            <value>
                <fullName>Preserve Relationship</fullName>
            </value>
            <value>
                <fullName>Protect Brand</fullName>
            </value>
            <value>
                <fullName>Financial Hardship</fullName>
            </value>
            <value>
                <fullName>Billing Issue</fullName>
            </value>
            <value>
                <fullName>Courtesy Credit (Post Launch)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
                <isActive>false</isActive>
                <label>Escalation</label>
            </value>
            <value>
                <fullName>Retention</fullName>
                <isActive>false</isActive>
                <label>Retention</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>