unpackaged/main/default/objects/Case/fields/Request_Source__c.field-meta.xml
<CustomField>
    <fullName>Request_Source__c</fullName>
    <label>Request Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roadmap</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Mid-cycle enhancement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>