unpackaged/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Process</fullName>
                <label>🖥️New Process</label>
            </value>
            <value>
                <fullName>Process Adjustment</fullName>
                <label>🏗️Process Adjustment</label>
            </value>
            <value>
                <fullName>Issue</fullName>
                <label>❗Issue</label>
            </value>
            <value>
                <fullName>Reporting</fullName>
                <label>📊 Reporting</label>
            </value>
            <value>
                <fullName>Data</fullName>
                <label>💽Data</label>
            </value>
            <value>
                <fullName>Training</fullName>
                <label>🏅Training</label>
            </value>
            <value>
                <fullName>Field (New/Change)</fullName>
                <label>🔠Field (New/Change)</label>
            </value>
            <value>
                <fullName>Documentation</fullName>
                <label>📝Documentation</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>🎲Other</label>
            </value>
            <value>
                <fullName>(Not Salesforce)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>